--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=device-api
 spring.datasource.url=jdbc:postgresql://localhost:5432/device-db
-spring.datasource.username=postgres
-spring.datasource.password=sa
+spring.datasource.username=#####
+spring.datasource.password=####
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
