--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/device-db
 spring.datasource.username=postgres
 spring.datasource.password=sa
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jackson.deserialization.fail-on-unknown-properties=true
