Insert GetbyId and DeleteById

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,8 @@
 spring.application.name=device-api
 spring.datasource.url=jdbc:postgresql://localhost:5432/device-db
-spring.datasource.username=#####
-spring.datasource.password=####
+spring.datasource.username=postgres
+spring.datasource.password=sa
 spring.datasource.driver-class-name=org.postgresql.Driver
-<<<<<<< HEAD
 spring.jpa.hibernate.ddl-auto=update
-
 spring.jackson.deserialization.fail-on-unknown-properties=true
-=======
-spring.jpa.hibernate.ddl-auto=create-drop
->>>>>>> 2c0b434246ef858ce858a5e25bbdf366a1225423
+
